removing pointerevent from book svg to prevent lag on mobile

--- a/src/screens/Subsidiary/Dashboard/screens/Journals/components/BookSection/_book.sass
+++ b/src/screens/Subsidiary/Dashboard/screens/Journals/components/BookSection/_book.sass
@@ -132,6 +132,7 @@
         width: 25%
         stroke: white
         mix-blend-mode: soft-light  
+        pointer-events: none
         
 
 @media screen and (max-width: 1450px)
